--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,11 +20,13 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.91.2'
+          hugo-version: '0.102.3'
           # extended: true
 
       - name: Build
-        run: hugo --minify
+        run: |
+          npm i
+          hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
