--- a/config.toml
+++ b/config.toml
@@ -132,16 +132,16 @@ version = "0.0"
 url_latest_version = "https://docs.biyard.co"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/biyard/docs.biyard.co"
+# github_repo = "https://github.com/biyard/docs.biyard.co"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://github.com/biyard/docs.biyard.co"
+# github_project_repo = "https://github.com/biyard/docs.biyard.co"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
 
 # Uncomment this if your GitHub repo does not have "main" as the default branch,
 # or specify a new value if you want to reference another branch in your GitHub links
-github_branch= "master"
+# github_branch= "master"
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
 gcs_engine_id = "d72aa9b2712488cc3"
