--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hugo theme for technical documentation.",
   "main": "none.js",
   "scripts": {
-    "start": "hugo --minify && http-server ./public",
+    "start": "hugo serve -b http://localhost",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
