--- a/config.toml
+++ b/config.toml
@@ -107,8 +107,8 @@ weight = 1
 section = ["HTML", "print", "RSS"]
 
 [params]
-copyright = "The Docsy Authors"
-privacy_policy = "https://policies.google.com/privacy"
+copyright = "Biyard and Madapp"
+# privacy_policy = "https://policies.google.com/privacy"
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
@@ -189,36 +189,36 @@ enable = false
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 [[params.links.user]]
-  name = "User mailing list"
-  url = "https://example.org/mail"
+  name = "Customer support email"
+  url = "mailto:hi@biyard.co"
   icon = "fa fa-envelope"
   desc = "Discussion and help from your fellow users"
-[[params.links.user]]
-  name ="Twitter"
-  url = "https://example.org/twitter"
-  icon = "fab fa-twitter"
-  desc = "Follow us on Twitter to get the latest news!"
-[[params.links.user]]
-  name = "Stack Overflow"
-  url = "https://example.org/stack"
-  icon = "fab fa-stack-overflow"
-  desc = "Practical questions and curated answers"
+# [[params.links.user]]
+#   name ="Twitter"
+#   url = "https://example.org/twitter"
+#   icon = "fab fa-twitter"
+#   desc = "Follow us on Twitter to get the latest news!"
+# [[params.links.user]]
+#   name = "Stack Overflow"
+#   url = "https://example.org/stack"
+#   icon = "fab fa-stack-overflow"
+#   desc = "Practical questions and curated answers"
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
-[[params.links.developer]]
-  name = "GitHub"
-  url = "https://github.com/google/docsy"
-  icon = "fab fa-github"
-  desc = "Development takes place here!"
-[[params.links.developer]]
-  name = "Slack"
-  url = "https://example.org/slack"
-  icon = "fab fa-slack"
-  desc = "Chat with other project developers"
-[[params.links.developer]]
-  name = "Developer mailing list"
-  url = "https://example.org/mail"
-  icon = "fa fa-envelope"
-  desc = "Discuss development issues around the project"
+# [[params.links.developer]]
+#   name = "GitHub"
+#   url = "https://github.com/google/docsy"
+#   icon = "fab fa-github"
+#   desc = "Development takes place here!"
+# [[params.links.developer]]
+#   name = "Slack"
+#   url = "https://example.org/slack"
+#   icon = "fab fa-slack"
+#   desc = "Chat with other project developers"
+# [[params.links.developer]]
+#   name = "Developer mailing list"
+#   url = "https://example.org/mail"
+#   icon = "fa fa-envelope"
+#   desc = "Discuss development issues around the project"
 
 # hugo module configuration
 
