--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -50,6 +50,9 @@ jobs:
           HUGO_ENV: production
         run: |
           npm i
+          cd themes/docsy
+          npm i
+          cd ../..
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
